Bug 472020.  Blindly appending to our insertion point really is the wrong thing to do.  This doesn't get us to correct behavior, but it gets us closer.  r+sr=sicking.